objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Email_Text__c</fullName>
        <label>Email Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Emai_text_validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Email_Text__c , &quot;\\w @[a-zA-Z_] ?\\.[a-zA-Z]{2,6}&quot;)  )</errorConditionFormula>
        <errorDisplayField>Email_Text__c</errorDisplayField>
        <errorMessage>invalid email address</errorMessage>
    </validationRules>
</CustomObject>